--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pep517==0.8.2
 Pillow==7.2.0
 progress==1.5
 pyparsing==2.4.6
+python-decouple==3.3
 python3-openid==3.2.0
 pytoml==0.1.21
 pytz==2020.1
