--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ distro==1.4.0
 dj-database-url==0.5.0
 Django==3.1.2
 django-cors-headers==3.5.0
+django-debug-toolbar==3.2.1
 django-heroku==0.3.1
 djangorestframework==3.12.1
 gunicorn==20.0.4
