--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-cors-headers==3.5.0
 django-debug-toolbar==3.2.1
 django-heroku==0.3.1
 djangorestframework==3.12.1
+et-xmlfile==1.1.0
 gunicorn==20.0.4
 html5lib==1.0.1
 httpagentparser==1.9.1
@@ -27,6 +28,7 @@ lockfile==0.12.2
 mccabe==0.6.1
 msgpack==0.6.2
 oauthlib==3.1.0
+openpyxl==3.0.7
 packaging==20.3
 pep517==0.8.2
 Pillow==8.2.0
