--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-allauth-django==0.42.6
 appdirs==1.4.3
 asgiref==3.2.10
 astroid==2.5.3
@@ -36,7 +35,7 @@ Pillow==8.2.0
 progress==1.5
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
-pylint==2.7.4
+PyJWT==2.3.0
 pyparsing==2.4.6
 python-decouple==3.3
 python3-openid==3.2.0
