--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,35 @@
 appdirs==1.4.3
-asgiref==3.2.10
-astroid==2.5.3
-CacheControl==0.12.6
+asgiref==3.5.2
 certifi==2019.11.28
 chardet==3.0.4
-colorama==0.4.3
-contextlib2==0.6.0
-defusedxml==0.6.0
 distlib==0.3.0
 distro==1.4.0
 dj-database-url==0.5.0
-Django==3.1.8
-django-cors-headers==3.5.0
-django-debug-toolbar==3.2.1
+Django==4.1
+django-cors-headers==3.13.0
+django-debug-toolbar==3.6.0
 django-heroku==0.3.1
-djangorestframework==3.12.1
-djangorestframework-simplejwt==4.7.0
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 et-xmlfile==1.1.0
-gunicorn==20.0.4
-html5lib==1.0.1
 httpagentparser==1.9.1
-idna==2.8
 ipaddr==2.2.0
-isort==5.8.0
-lazy-object-proxy==1.6.0
 lockfile==0.12.2
 mccabe==0.6.1
 msgpack==0.6.2
-oauthlib==3.1.0
-openpyxl==3.0.7
-packaging==20.3
-pep517==0.8.2
-Pillow==8.2.0
+openpyxl==3.0.10
+Pillow==9.2.0
 progress==1.5
-psycopg2==2.8.6
-psycopg2-binary==2.8.6
+psycopg2==2.9.3
 PyJWT==2.3.0
 pyparsing==2.4.6
 python-decouple==3.3
-python3-openid==3.2.0
 pytoml==0.1.21
 pytz==2020.1
-requests==2.22.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
 six==1.14.0
 sqlparse==0.3.1
 toml==0.10.2
+tzdata==2022.2
 urllib3==1.25.8
 webencodings==0.5.1
 whitenoise==5.2.0
